# PORR

./: .gitignore  CMakeLists.txt  PORR-algorytmGWO.docx  README.md  ReadMe.txt  directives.h  main.c  maps.c  maps.h  wolf.c  wolf.h
